# make_video

./: .env.example  .gitignore  README.en.md  README.ja.md  README.ko.md  README.md  WORKFLOW.md  bgm_oneshot.py  monitor_musicgen.sh  musicgen_oneshot.py  mux_oneshot.py  opendesign_playwright_e2e.py  opendesign_smoke.py  plan_oneshot.py  pyproject.toml  record_oneshot.py  render_oneshot.py  voice_oneshot.py
.teamagent/: knowledge.db  knowledge.db-shm  knowledge.db-wal  manifest.json  shared-claude.md
.teamagent/recording-memory/: metrics.jsonl
src/: cli.py  pipeline.py  types.py
src/agents/: _prompt_override.py  demo_driver.py  demo_planner.py  error_agent.py  od_critic.py  opendesigner.py  project_analyzer.py  quality_judge.py  remotion_composer.py  setup_runner.py  voice_over.py
src/observability/: audit.py  error_log.py  events.py  logger.py  tracer.py
src/tools/: bgm_duck_mux.py  bgm_minimax.py  bgm_musicgen.py  bgm_mux.py  bgm_scaffold.py  browser_session.py  captions.py  cli_recorder.py  demo_executor.py  dotenv.py  ffbin.py  git_clone.py  langfuse_score.py  llm.py  llm_retry.py  opendesign_client.py  opendesign_lifecycle.py  plan_executor.py  pty_session.py  recorder.py  remotion_codegen.py  remotion_render.py  run_metrics.py  score_log.py  service_manager.py  service_observability.py  shell.py  tts_edge.py  voice_timeline.py  web_recorder.py  window_enum.py
src/verify/: audio.py  html.py  recording.py  video.py
src/web/: main.py
src/web/templates/: _briefs_cards.html  (+36 more)
tests/: test_llm_smoke.py  test_observability_smoke.py  test_pipeline_smoke.py
