[project]
name = "viedo-product"
version = "0.1.0"
description = "Linear Agent workflow for promo video production"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "arize-phoenix>=5.0",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-anthropic>=0.1.6",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.observability", "src.tools"]
